correct spacing on cat container

--- a/src/styles/cat-container.scss
+++ b/src/styles/cat-container.scss
@@ -10,7 +10,7 @@
     transition: transform 250ms linear, border-radius 300ms linear;
     transition-delay: 250ms;
     z-index: 50;
-    top: -3rem;
+    top: 0;
     overflow: hidden;
 
     .star-background {
